--- a/wp-content/themes/Noel/web/sass/_portfolio-teasers.scss
+++ b/wp-content/themes/Noel/web/sass/_portfolio-teasers.scss
@@ -67,6 +67,11 @@
     }
   }
   .small-teasers {
+    @include breakpoint(small only) {
+        .teaser::after, .content, .border {
+            display: block;
+        }
+    }
     @include breakpoint(medium) {
       display:none;
     }
